--- a/angularping/apptest/package.json
+++ b/angularping/apptest/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -38,7 +38,10 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "http-proxy-middleware": "^3.0.5",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "mysql2": "^3.16.0",
+    "pdfkit": "^0.17.2",
     "rxjs": "~7.8.0",
     "ts-wait": "^2.1.1",
     "tslib": "^2.3.0"
@@ -50,6 +53,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
+    "@types/pdfkit": "^0.17.4",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
