--- a/angularping/apptest/package.json
+++ b/angularping/apptest/package.json
@@ -34,9 +34,11 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.4",
+    "chart.js": "^4.5.1",
     "charts.css": "^1.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.5",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
